# zignocchio

./: .gitignore  AGENTS.md  Agent.md  jest.config.js
examples/counter/tests/: litesvm.test.ts  surfpool.test.ts
examples/escrow/tests/: litesvm.test.ts  surfpool.test.ts
examples/hello/tests/: litesvm.test.ts  surfpool.test.ts
examples/logonly/tests/: litesvm.test.ts
examples/noop/tests/: litesvm.test.ts
examples/pda-storage/tests/: litesvm.test.ts  surfpool.test.ts
examples/token-vault/tests/: litesvm.test.ts  surfpool.test.ts
examples/transfer-sol/tests/: litesvm.test.ts  surfpool.test.ts
examples/vault/: lib.zig
examples/vault/tests/: litesvm.test.ts  surfpool.test.ts
sdk/: anti_patterns.zig  memo.zig  system.zig  token_2022.zig  zignocchio.zig
tests_rust/: Cargo.toml
tests_rust/tests/: vault_mollusk.rs
