[package]
name = "zignocchio-mollusk-tests"
version = "0.1.0"
edition = "2021"
publish = false
autobins = false
autoexamples = false
autotests = false

[dependencies]
mollusk-svm = "0.12.1-agave-4.0"
solana-pubkey = "4.2.0"
solana-account = "3.4.0"
solana-instruction = "3.4.0"
solana-program-error = "3.0.1"
solana-system-program = "4.0.0-beta.6"

[[test]]
name = "hello_mollusk"
path = "examples/hello.rs"

[[test]]
name = "counter_mollusk"
path = "examples/counter.rs"

[[test]]
name = "vault_mollusk"
path = "examples/vault.rs"
